--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
 	"name": "wedding",
 	"version": "0.0.1",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Sharknoon/wedding.git"
+	},
+	"license": "Unlicense",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -13,6 +18,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/forms": "^0.3.3",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.3.4",
