--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
-		"@tailwindcss/forms": "^0.3.3",
+		"@tailwindcss/forms": "0.4.0-alpha.1",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
 		"autoprefixer": "^10.3.4",
@@ -32,7 +32,7 @@
 		"svelte": "^3.34.0",
 		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.9.4",
-		"tailwindcss": "^2.2.15",
+		"tailwindcss": "3.0.0-alpha.1",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
