--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"qrcode": "^1.4.4"
+	}
 }
