--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.0.0-next.46",
 		"@sveltejs/kit": "next",
-		"@tailwindcss/forms": "0.4.0-alpha.1",
+		"@tailwindcss/forms": "^0.4.0",
 		"@typescript-eslint/eslint-plugin": "^4.19.0",
 		"@typescript-eslint/parser": "^4.19.0",
-		"autoprefixer": "^10.3.4",
+		"autoprefixer": "^10.4.0",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
-		"postcss": "^8.3.6",
+		"postcss": "^8.4.4",
 		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"svelte": "^3.34.0",
 		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.9.4",
-		"tailwindcss": "3.0.0-alpha.1",
+		"tailwindcss": "^3.0.0",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
