--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"postcss": "^8.4.6",
+		"postcss": "^8.4.8",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
-		"prettier-plugin-tailwindcss": "^0.1.7",
+		"prettier-plugin-tailwindcss": "^0.1.8",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
 		"tailwindcss": "^3.0.22",
 		"tslib": "^2.3.1",
-		"typescript": "~4.5.4"
+		"typescript": "~4.6.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/forms": "^0.4.0",
 		"dom-to-image": "^2.6.0",
+		"mongodb": "4.4",
 		"pdfmake": "^0.3.0-beta.1",
 		"qrcode": "^1.5.0"
 	}
