--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,9 @@
-# npm packages
+.DS_Store
 node_modules
-
-# Editor directories and files
-.idea
-.vscode
-
-# Distribution folders
-.svelte-kit
-build
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+*.local
