finally fixed printing

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
+		"@types/dom-to-image": "^2.6.4",
 		"@types/qrcode": "^1.4.2",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
@@ -41,6 +42,7 @@
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.2",
+		"dom-to-image": "^2.6.0",
 		"mongodb": "^4.8.1",
 		"qrcode": "^1.5.1"
 	}
