--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
 		"build": "vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@types/dom-to-image": "^2.6.4",
 		"@types/qrcode": "^1.4.2",
-		"@types/sharp": "^0.30.5",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.8",
@@ -38,14 +37,13 @@
 		"tailwindcss": "^3.1.8",
 		"tslib": "^2.3.1",
 		"typescript": "~4.7.4",
-		"vite": "^3.0.0"
+		"vite": "^3.1.0"
 	},
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.2",
 		"dom-to-image": "^2.6.0",
 		"mongodb": "^4.8.1",
-		"qrcode": "^1.5.1",
-		"sharp": "^0.30.7"
+		"qrcode": "^1.5.1"
 	}
 }
