--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
 	"name": "wedding",
 	"version": "0.0.1",
+	"private": true,
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Sharknoon/wedding.git"
 	},
 	"license": "Unlicense",
 	"scripts": {
-		"dev": "vite dev --host",
+		"dev": "vite dev",
 		"build": "vite build",
-		"package": "svelte-kit package",
 		"preview": "vite preview",
+		"test": "playwright test",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"lint": "prettier --plugin-search-dir . --check . && eslint .",
+		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.25.0",
 		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
 		"@types/dom-to-image": "^2.6.4",
