--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Call Portainer Container Recreation Webhook
-        run: curl -X POST https://portainer.sharknoon.de/api/webhooks/30c6e224-a3c6-4677-ad3e-7661eaee6e06
+        run: curl -X POST ${{ secrets.PORTAINER_CONTAINER_WEBHOOK }}
 
   clean:
     needs: build
