--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Login to Github Container Registry
         run: echo ${{ secrets.GHCR_PAT }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
@@ -31,9 +31,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete untagged Images
-        uses: actions/github-script@v3
+        uses: actions/github-script@v6
         with:
-          github-token: ${{ secrets.GHCR_PAT }}
+          # github-token: ${{ secrets.GHCR_PAT }}
           script: |
             const response = await github.request("GET /user/packages/container/${{ env.PACKAGE_NAME }}/versions",
               { 
