--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Delete untagged Images
         uses: actions/github-script@v6
         with:
-          # github-token: ${{ secrets.GHCR_PAT }}
+          github-token: ${{ secrets.GHCR_PAT }}
           script: |
             const response = await github.request("GET /user/packages/container/${{ env.PACKAGE_NAME }}/versions",
               { 
