--- a/package.json
+++ b/package.json
@@ -18,34 +18,33 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.25.0",
-		"@sveltejs/adapter-node": "next",
-		"@sveltejs/kit": "next",
+		"@playwright/test": "^1.29.1",
+		"@sveltejs/adapter-node": "^1.0.0",
+		"@sveltejs/kit": "^1.0.1",
 		"@types/dom-to-image": "^2.6.4",
-		"@types/qrcode": "^1.4.2",
-		"@typescript-eslint/eslint-plugin": "^5.27.0",
-		"@typescript-eslint/parser": "^5.27.0",
-		"autoprefixer": "^10.4.8",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
+		"@types/qrcode": "^1.5.0",
+		"@typescript-eslint/eslint-plugin": "^5.47.1",
+		"@typescript-eslint/parser": "^5.47.1",
+		"autoprefixer": "^10.4.13",
+		"eslint": "^8.30.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.16",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"prettier-plugin-tailwindcss": "^0.1.13",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.6",
-		"tailwindcss": "^3.1.8",
-		"tslib": "^2.3.1",
-		"typescript": "~4.7.4",
-		"vite": "^3.1.0"
+		"postcss": "^8.4.20",
+		"prettier": "^2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"prettier-plugin-tailwindcss": "^0.2.1",
+		"svelte": "^3.55.0",
+		"svelte-check": "^3.0.1",
+		"tailwindcss": "^3.2.4",
+		"tslib": "^2.4.1",
+		"typescript": "^4.9.4",
+		"vite": "^4.0.3"
 	},
 	"type": "module",
 	"dependencies": {
-		"@tailwindcss/forms": "^0.5.2",
+		"@tailwindcss/forms": "^0.5.3",
 		"dom-to-image": "^2.6.0",
-		"mongodb": "^4.8.1",
+		"mongodb": "^4.13.0",
 		"qrcode": "^1.5.1"
 	}
 }
