--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.29.1",
-		"@sveltejs/adapter-node": "^1.0.0",
-		"@sveltejs/kit": "^1.0.1",
+		"@playwright/test": "1.29.2",
+		"@sveltejs/adapter-node": "^1.1.0",
+		"@sveltejs/kit": "^1.0.7",
 		"@types/dom-to-image": "^2.6.4",
 		"@types/qrcode": "^1.5.0",
-		"@typescript-eslint/eslint-plugin": "^5.47.1",
-		"@typescript-eslint/parser": "^5.47.1",
+		"@typescript-eslint/eslint-plugin": "^5.48.0",
+		"@typescript-eslint/parser": "^5.48.0",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.30.0",
-		"eslint-config-prettier": "^8.5.0",
+		"eslint": "^8.31.0",
+		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.20",
-		"prettier": "^2.8.1",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.2",
 		"prettier-plugin-svelte": "^2.9.0",
 		"prettier-plugin-tailwindcss": "^0.2.1",
 		"svelte": "^3.55.0",
@@ -38,7 +38,7 @@
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.4",
-		"vite": "^4.0.3"
+		"vite": "^4.0.4"
 	},
 	"type": "module",
 	"dependencies": {
