--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "1.29.2",
+		"@prettier/plugin-xml": "^2.2.0",
 		"@sveltejs/adapter-node": "^1.1.0",
 		"@sveltejs/kit": "^1.0.7",
 		"@types/dom-to-image": "^2.6.4",
