--- a/package.json
+++ b/package.json
@@ -18,34 +18,34 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "1.29.2",
+		"@playwright/test": "^1.31.1",
 		"@prettier/plugin-xml": "^2.2.0",
-		"@sveltejs/adapter-node": "^1.1.0",
-		"@sveltejs/kit": "^1.0.7",
+		"@sveltejs/adapter-node": "^1.2.0",
+		"@sveltejs/kit": "^1.8.5",
 		"@types/dom-to-image": "^2.6.4",
 		"@types/qrcode": "^1.5.0",
-		"@typescript-eslint/eslint-plugin": "^5.48.0",
-		"@typescript-eslint/parser": "^5.48.0",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
 		"autoprefixer": "^10.4.13",
-		"eslint": "^8.31.0",
+		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"postcss": "^8.4.21",
-		"prettier": "^2.8.2",
+		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
-		"prettier-plugin-tailwindcss": "^0.2.1",
-		"svelte": "^3.55.0",
-		"svelte-check": "^3.0.1",
-		"tailwindcss": "^3.2.4",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.4",
-		"vite": "^4.0.4"
+		"prettier-plugin-tailwindcss": "^0.2.3",
+		"svelte": "^3.55.1",
+		"svelte-check": "^3.0.4",
+		"tailwindcss": "^3.2.7",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.4"
 	},
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.3",
 		"dom-to-image": "^2.6.0",
-		"mongodb": "^4.13.0",
+		"mongodb": "^5.1.0",
 		"qrcode": "^1.5.1"
 	}
 }
