--- a/.github/workflows/build-push-and-deploy-image.yml
+++ b/.github/workflows/build-push-and-deploy-image.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
 
       - name: Login to Github Container Registry
         uses: docker/login-action@v2
