--- a/.github/workflows/build-push-and-deploy-image.yml
+++ b/.github/workflows/build-push-and-deploy-image.yml
@@ -13,6 +13,8 @@ jobs:
         
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Login to Github Container Registry
         uses: docker/login-action@v2
