--- a/.github/workflows/build-push-and-deploy-image.yml
+++ b/.github/workflows/build-push-and-deploy-image.yml
@@ -10,6 +10,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        
+      - uses: actions/setup-node@v3
+      
+      - name: Install dependencies
+        run: npm ci
+        
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+        
+      - name: Run tests
+        run: npx playwright test
 
       - name: Login to Github Container Registry
         uses: docker/login-action@v2
