--- a/.github/workflows/build-push-and-deploy-image.yml
+++ b/.github/workflows/build-push-and-deploy-image.yml
@@ -5,22 +5,40 @@ on:
       - main
 
 jobs:
-  build:
+  test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         
-      - uses: actions/setup-node@v3
-      
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          
       - name: Install dependencies
         run: npm ci
         
-      - name: Install Playwright browsers
+      - name: Install Playwright Browsers
         run: npx playwright install --with-deps
         
-      - name: Run tests
+      - name: Run Playwright tests
         run: npx playwright test
+        
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
+  build:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Login to Github Container Registry
         uses: docker/login-action@v2
