--- a/package.json
+++ b/package.json
@@ -18,34 +18,34 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.32.2",
+		"@playwright/test": "^1.33.0",
 		"@prettier/plugin-xml": "^2.2.0",
-		"@sveltejs/adapter-node": "^1.2.3",
-		"@sveltejs/kit": "^1.15.2",
+		"@sveltejs/adapter-node": "^1.2.4",
+		"@sveltejs/kit": "^1.16.0",
+		"@tailwindcss/forms": "^0.5.3",
 		"@types/dom-to-image": "^2.6.4",
 		"@types/qrcode": "^1.5.0",
-		"@typescript-eslint/eslint-plugin": "^5.57.1",
-		"@typescript-eslint/parser": "^5.57.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.2",
+		"@typescript-eslint/parser": "^5.59.2",
 		"autoprefixer": "^10.4.14",
-		"eslint": "^8.37.0",
+		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.21",
-		"prettier": "^2.8.7",
+		"eslint-plugin-svelte": "^2.27.3",
+		"postcss": "^8.4.23",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.0",
-		"prettier-plugin-tailwindcss": "^0.2.6",
+		"prettier-plugin-tailwindcss": "^0.2.8",
 		"svelte": "^3.58.0",
-		"svelte-check": "^3.2.0",
-		"tailwindcss": "^3.3.1",
+		"svelte-check": "^3.3.1",
+		"tailwindcss": "^3.3.2",
 		"tslib": "^2.5.0",
-		"typescript": "^5.0.3",
-		"vite": "^4.2.1"
+		"typescript": "^5.0.4",
+		"vite": "^4.3.5"
 	},
 	"type": "module",
 	"dependencies": {
-		"@tailwindcss/forms": "^0.5.3",
 		"dom-to-image": "^2.6.0",
-		"mongodb": "^5.2.0",
-		"qrcode": "^1.5.1"
+		"mongodb": "^5.4.0",
+		"qrcode": "^1.5.3"
 	}
 }
