fix missing env variable

--- a/.github/workflows/test-build-push-and-deploy-image.yml
+++ b/.github/workflows/test-build-push-and-deploy-image.yml
@@ -11,20 +11,22 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-        
+
       - name: Run Playwright tests
         run: npx playwright test
+        env:
+          MONGODB_URL: ${{ secrets.MONGODB_URL }}
 
   build:
     needs: test
