--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^8.0.1",
 		"@playwright/test": "^1.33.0",
 		"@prettier/plugin-xml": "^2.2.0",
 		"@sveltejs/adapter-node": "^1.2.4",
