--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.16.0",
 		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/typography": "^0.5.9",
 		"@types/dom-to-image": "^2.6.4",
 		"@types/qrcode": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
