--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 MONGODB_URL=mongodb://<username>:<password>@<host>:<port>/<database>
 PUBLIC_GOOGLE_MAPS_API_KEY=<39-digit-api-key>
 ADMIN_LOGIN=<username>:<password>
-PUBLIC_PLAUSIBLE_URL=<url>/js/script.js
+PUBLIC_TRACKING_SCRIPT=<script ...></script>
