--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
 		"@faker-js/faker": "^8.0.2",
 		"@playwright/test": "^1.37.1",
 		"@prettier/plugin-xml": "^3.2.1",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.24.1",
 		"@tailwindcss/forms": "^0.5.6",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/dom-to-image": "^2.6.4",
+		"@types/ffmpeg": "^1.0.6",
 		"@types/qrcode": "^1.5.2",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
@@ -38,7 +40,6 @@
 		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.5.4",
 		"svelte": "^4.2.0",
-		"svelte-adapter-bun": "^0.5.0",
 		"svelte-check": "^3.5.1",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.6.2",
@@ -48,8 +49,11 @@
 	"type": "module",
 	"dependencies": {
 		"dom-to-image": "^2.6.0",
+		"ffmpeg": "^0.0.4",
 		"lightgallery": "^2.7.2",
-		"mongodb": "^6.0.0",
-		"qrcode": "^1.5.3"
+		"minio": "^7.1.3",
+		"mongodb": "^6.2.0",
+		"qrcode": "^1.5.3",
+		"sharp": "^0.32.6"
 	}
 }
