added better tests for environment

--- a/.github/workflows/test-build-push-and-deploy-image.yml
+++ b/.github/workflows/test-build-push-and-deploy-image.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run Playwright tests
         run: npx playwright test
         env:
-          MONGODB_URL: mongodb://localhost/?replicaSet=rs0
+          MONGODB_URL: mongodb://localhost/
 
   build:
     needs: test
