--- a/.github/workflows/test-build-push-and-deploy-image.yml
+++ b/.github/workflows/test-build-push-and-deploy-image.yml
@@ -47,9 +47,16 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
+    permissions: write-all
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+         
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Github Container Registry
         uses: docker/login-action@v3
@@ -70,24 +77,21 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Call Portainer container recreation webhook
-        run: curl -X POST ${{ secrets.PORTAINER_CONTAINER_WEBHOOK }}
 
   clean:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Delete old image versions
-        uses: actions/delete-package-versions@v4
+        uses: snok/container-retention-policy@v2
         with:
-          package-type: 'container'
-          package-name: 'wedding'
-          min-versions-to-keep: 1
+          image-names: ${{ github.event.repository.name }}
+          cut-off: 5 minutes ago UTC
+          account-type: personal
+          token: ${{ secrets.GITHUB_TOKEN }}
+          token-type: github-token
+          
