--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ MONGODB_URL=mongodb://<username>:<password>@<host>:<port>/<database>
 PUBLIC_GOOGLE_MAPS_API_KEY=<39-digit-api-key>
 ADMIN_LOGIN=<username>:<password>
 PUBLIC_TRACKING_SCRIPT=<script ...></script>
+MINIO_ENDPOINT=<host>
+MINIO_PORT=<port>
+MINIO_ROOT_USER=<username>
+MINIO_ROOT_PASSWORD=<password>
