--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"tailwindcss": "^3.4.13",
 		"tslib": "^2.7.0",
 		"typescript": "^5.6.2",
+		"typescript-eslint": "^8.7.0",
 		"vite": "^5.4.8"
 	},
 	"type": "module",
